# HowLongToBeat_scraper

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.es.md  README.md  debug_html.py  pyproject.toml  scraper.py  setup.cfg  test_cli_flow.py  test_direct.py  test_headless.py  test_parsing.py
src/howlongtobeat_scraper/: __init__.py  __main__.py  api.py
src/howlongtobeat_scraper.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  conftest.py  test_api.py  test_browser_manager.py  test_models.py  test_scraper.py
