[metadata]
name = howlongtobeat-scraper
version = 0.2.0
author = Tu Nombre
author_email = tu.email@example.com
description = Un scraper para obtener los tiempos de juego desde HowLongToBeat.com.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tu_usuario/howlongtobeat_scrapper
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    playwright
    beautifulsoup4
    lxml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    howlongtobeat = howlongtobeat_scraper.__main__:main